--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,8 @@
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+  border-radius: 50%;
+  border: white 3px solid;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -25,11 +27,27 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ul.Social-Icons {
+  display: flex;
+  width: 50VW;
+  justify-content: center;
+  list-style-type: none;
+  padding: 16px;
+  margin: 0;
+}
+
+
+.icon {
+  border-radius: 50%;
+  border: white 3px solid;
+  padding: 8px;
+  margin: 16px 8px;
+  transition: all .2s ease-in-out;
+  color: white
+}
+
+:hover.icon {
+  cursor: pointer;
+  transform: scale(1.1);
+  color: white;
 }
