--- a/src/App.css
+++ b/src/App.css
@@ -30,9 +30,15 @@
 .header {
   display: flex;
 }
+
 .info {
   align-self: center;
-  padding: 16px;
+  font-size: 24px;
+  padding: 32px;
+}
+.title, .location {
+  font-size: 18px;
+  margin-top: 16px;
 }
 
 ul.Social-Icons {
@@ -65,9 +71,12 @@ ul.Social-Icons {
   position: absolute;
   font-size: 16px;
   padding: 8px;
-  color: white;
-  background-color: black;
+  color: black;
+  background-color:white;
   border-radius: 10%;
+}
+audio {
+  color: white
 }
 
 .tooltip:hover .tooltiptext {
