--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,17 @@
 @media (prefers-reduced-motion: no-preference) {
 }
 
+#tsparticles {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  /* z-index: -1;  */
+}
+
+p {
+  z-index: 100;
+}
+
 .App-header {
   background-color: #000000;
   min-height: 100vh;
