--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,8 @@
 @media (prefers-reduced-motion: no-preference) {
 }
 
+
+
 #tsparticles {
   position: absolute;
   width: 100%;
@@ -20,6 +22,7 @@
 
 p {
   z-index: 100;
+  height: 100%;
 }
 
 .App-header {
@@ -42,10 +45,17 @@ p {
   align-self: center;
   font-size: 24px;
   padding: 32px;
+  padding-bottom: 8px;
 }
-.title, .location {
+.title, .location, .hobbies, .about {
   font-size: 18px;
   margin-top: 16px;
+}
+
+.about, .hobbies {
+  padding: 24px;
+  margin-top: 0;
+  line-height: 1.5;
 }
 
 ul.Social-Icons {
@@ -101,4 +111,15 @@ footer {
   position: absolute;
   bottom: 0;
   font-size: 14px;
+}
+
+@media only screen and (max-width: 815px) {
+  .title, .location, .hobbies, .about {
+    font-size: 12px;
+    margin-top: 8px;
+  }
+  footer {
+    bottom: -20%;
+  }
+
 }
