--- a/src/App.css
+++ b/src/App.css
@@ -86,8 +86,8 @@ ul.Social-Icons {
   visibility: hidden;
   font-family: Arial, Helvetica, sans-serif;
   position: absolute;
-  font-size: 16px;
-  padding: 8px;
+  font-size: 12px;
+  padding: 4px 8px;
   color: black;
   background-color:white;
   border-radius: 10%;
