--- a/src/components/footer/footer.styles.css
+++ b/src/components/footer/footer.styles.css
@@ -1,3 +1,9 @@
+.footer {
+    z-index: 100;
+    height: 100%;
+    margin-bottom: 0;
+}
+
 footer {
     font-size: 14px;
     margin-bottom: 24px;
