--- a/src/pages/home/home.styles.css
+++ b/src/pages/home/home.styles.css
@@ -10,6 +10,15 @@
     border: #fff 3px solid;
   }
   
+  .example-appear {
+    opacity: 0.01;
+  }
+  
+  .example-appear.example-appear-active {
+    opacity: 1;
+    transition: opacity .7s ease-in;
+  }
+  
   @media (prefers-reduced-motion: no-preference) {
   }
   
