--- a/src/pages/home/home.styles.css
+++ b/src/pages/home/home.styles.css
@@ -55,6 +55,10 @@
     margin-top: 16px;
   }
   
+  .title {
+    line-height: 1.5em;
+  }
+  
   .about, .hobbies {
     padding: 16px 24px;
     margin-top: 0;
