touch up on personal portfolio:

--- a/src/pages/home/home.styles.css
+++ b/src/pages/home/home.styles.css
@@ -57,6 +57,9 @@
   
   .title {
     line-height: 1.5em;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
   }
   
   .about, .hobbies {
